fixes bug 122675 "socket transport doesn't cancel properly if busy resolving or connecting" r=gordon, sr=mscott